--- a/Web.config
+++ b/Web.config
@@ -22,6 +22,7 @@
   
     
   <system.web>
+    <customErrors mode="Off"/>
     <httpRuntime targetFramework="4.5" />
     <compilation targetFramework="4.5" />
     <authentication mode="Forms">
